Mon Jan  6 15:14:24 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/token.c added token name to marker value in log

Sun Jan  5 16:48:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: cleanup
	* src/odbc/odbc.c: do not set database (now useless)
	* src/odbc/unittests/t0001.c src/odbc/unittests/t0002.c:
	* src/odbc/unittests/t0003.c:
	- do not reset TDSDUMP environment
	* src/tds/login.c: set database during login if specified
	* src/tds/token.c: update docs on tds_process_simple_query

Sun Jan  5 15:27:40 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: prevent error setting length of NULL to 0
	* src/ctlib/unittests/t0002.c: do not try to print NULL data
	* src/dblib/dblib.c: cleanup for C++ compile
	* src/tds/login.c: small optimization
	* src/tds/query.c: add tds_quote_id

Sun Jan  5 14:38:21 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c:
	- added tds_process_simple_query to libtds
	* src/odbc/odbc.c:
	- use tds_process_simple_query fixing some problems
	* src/odbc/unittests/t0003.c: cleanup

Sun Jan  5 11:27:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c src/odbc/odbc.c:
	- more SQLError to error.c file
	- added SQLGetDiagRec function (error.c)

Sat Jan  4 14:05:55 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h src/ctlib/cs.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/odbc/connectparams.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c:
	- cleanup compiling with a C++ compiler
	* src/odbc/odbc.c:
	- cleanup compiling with a C++ compiler
	- fix memory leak during connect
	- added some FIXME
	- fix reading of some possibly not terminated string
	- fix a possible buffer overflow in SQLError

Sat Jan  4 11:34:49 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/ctlib/unittests/t0002.c:
	- set also curr_resinfo for STATUS_RESULT
	- more check for sp_who call
