@@ -1,4 +1,4 @@
-TESTS		=	t0001 t0002 t0003 t0004 connect
+TESTS		=	t0001 t0002 t0003 t0004 connect print
 check_PROGRAMS	=	$(TESTS)
 
 t0001_SOURCES	=	t0001.c common.c common.h
@@ -6,6 +6,7 @@ t0002_SOURCES	=	t0002.c common.c common.h
 t0003_SOURCES	=	t0003.c common.c common.h
 t0004_SOURCES	=	t0004.c common.c common.h
 connect_SOURCES	=	connect.c common.c common.h
+print_SOURCES	=	print.c common.c common.h
 
 LIBS		=	-lodbc @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include -I$(ODBC_INC)
