@@ -1,3 +1,14 @@
+Mon Jan  6 22:41:37 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/error.c:
+	- fix error in SQLGetDiagRec not returning correct errors
+	- add SQLGetDiagField
+	* src/odbc/odbc.c:
+	- enable SQLGetDiagField and SQLGetDiagRec
+	* src/odbc/unittests/Makefile.am src/odbc/unittests/print.c(added):
+	- add print test (unfinished)
+	* src/odbc/unittests/common.c:
+	- do not print garbage error
+
 Mon Jan  6 15:14:24 EST 2003	JK Lowden <jklowden@schemamania.org>
 	* src/tds/token.c added token name to marker value in log
 
